<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.freelancing.ahmed.helloandroid.MainActivity">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:id="@+id/imageUdacity"

                    android:scaleType="centerCrop"
                    android:layout_alignParentTop="true"
                    />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/udacity"
                   android:id="@+id/title"
                   android:layout_below="@id/imageUdacity"
                   android:layout_marginTop="16dp"
                   android:layout_marginLeft="120dp"
                   />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:id="@+id/desc"
                    android:layout_marginRight="16dp"
                    android:layout_below="@id/title"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/phone"
                    android:id="@+id/phone"
                    android:layout_below="@id/desc"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:id="@+id/address"
                    android:layout_below="@id/phone"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="20sp"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/address2"
                android:layout_below="@id/address"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/address2"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    >

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/facebook"
                            android:src="@drawable/facebook"

                            />
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/twitter"
                            android:src="@drawable/twitter"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/instagram"
                            android:src="@drawable/instagram"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/gridorld"
                            android:id="@+id/website"/>
                </LinearLayout>

        </RelativeLayout>
</ScrollView>